# minesweeper

./: CMakeLists.txt  README.md
src/: minesweeper.c
